2005-09-27  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JSeparator.java
	(updateUI): Removed invalidate call. This is unnecessary.
	* javax/swing/plaf/basic/BasicSeparatorUI.java
	(paint): Reworked painting so that it paints the separator
	correctly.
	(getPreferredSize): Fixed to return the correct values according
	to the JDK.
	(getMinimumSize): Likewise.
	(getMaximumSize): Likewise.

2005-09-27  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/MetalBorders.java
	(RolloverButtonBorder): new class.

2005-09-27  Roman Kennke  <kennke@aicas.com>

	* javax/swing/BoxLayout.java
	(preferredLayoutSize): Fixed to respect the containers insets.
	(layoutComponent): Likewise.

2005-09-27  Roman Kennke  <kennke@aicas.com>

	* javax/swing/SizeRequirements.java
	(calculateTiledPositions): Only adjust sizes if the allocated
	span is actually different from the used span.
	(calculateAlignedPositions): Call adjustFromRight also if
	baseline == 0, otherwise we get strange results because 0 * x = 0.

2005-09-27  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/SimpleAttributeSet.java:
	(removeAttributes(AttributeSet)): Only remove attributes from the 
	current set if their keys AND values are found in the given set

2005-09-27  Lillian Angel  <langel@redhat.com>

	Fixes Bug #24067
	* java/awt/Component.java
	(removeNotify): Should call hide on the peer before
	disposing of it. This stops the flashing when the 
	tooltips are removed from the component.
	* javax/swing/plaf/basic/BasicToolTipUI.java
	(getPreferredSize): If the accelerator is null, we should
	paint the mnenomic if it is available.

2005-09-27  Tom Tromey  <tromey@redhat.com>

	* java/awt/Window.java (createBufferStrategy): Can throw AWTException.
	* java/awt/Canvas.java (createBufferStrategy): Can throw AWTException.

2005-09-27  Lillian Angel  <langel@redhat.com>
	
	Fixes Bug #24044
	* javax/swing/ToolTipManager.java